# comp-programming-fun

./: .gitignore  CMakeLists.txt  README.md  go.work
cmake/: flags.cmake
common/: bench.hpp  rng.hpp  testing.hpp
problems/0001-regular-bracket-sequence/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0002-discount/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0003-painting-the-fence/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0004-stressful-training/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0005-knapsack/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0006-clear-the-string/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0007-jzzhu-and-numbers/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0008-the-bakery/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0009-child-and-sequence/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0010-thief-in-a-shop/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0011-kalila-and-dimna/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0012-cyclical-quest/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0013-lomsat-gelral/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0014-xenia-and-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0015-dominant-indices/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0016-kingdom-and-its-cities/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0017-new-year-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0018-beard-graph/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0019-you-are-given-a-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0020-almost-permutation/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0021-project-selection/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0022-grundys-game/: go.mod  reference.go  solution.go  solution_test.go
problems/0023-kth-subset-xor/: go.mod  reference.go  solution.go  solution_test.go
problems/0024-at-most-k-distinct-digits/: reference.py  solution.py  test_solution.py
problems/0025-point-set-diameter/: go.mod  reference.go  solution.go  solution_test.go
problems/0026-currency-arbitrage/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0027-buy-sell-stock-iv/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0028-longest-common-substring/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0029-aho-corasick-occurrences/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0030-distinct-palindromes/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0031-wildcard-matching-fft/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0032-max-weight-general-matching/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0033-tree-matching-exactly-k/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0034-grid-hamiltonian-cycles/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0035-link-cut-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0036-dominator-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0037-linear-recurrence-nth-term/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0038-gomory-hu-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0039-offline-dynamic-connectivity/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0040-suffix-tree-ukkonen/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0041-steiner-tree/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0042-nonintersecting-lattice-paths/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0043-polynomial-inverse-ntt/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0044-range-kth-smallest-persistent/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0045-segment-tree-beats/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0046-online-dynamic-connectivity/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0047-directed-mst/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0048-matroid-intersection/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0049-manhattan-mst/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0050-slope-trick/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0051-convex-hull-3d/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0052-multipoint-evaluation/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  tests.cpp
problems/0053-weighted-matroid-intersection/: CMakeLists.txt  bench.cpp  main.cpp  reference.hpp  solution.hpp  (+1 more)
(+30 files in other folders)
